--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^20.17.30",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
@@ -28,6 +29,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "tslib": "^2.8.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vite-plugin-checker": "^0.6.0"
